syntax = "proto3";

option go_package = "github.com/li-zeyuan/micro/micro.common.api/pb/profile";

package profile;

message  Profile {
    int64 uid = 1;
    string name = 2;
}

message UpsertReq {
    int64 uid = 1;
    string name = 2;
}

message UpsertResp {
     int32 dm_error = 1;
     string error_msg = 2;
}

message MGetReq{
    repeated int64 uids = 1;
}

message MGetResp{
     int32 dm_error = 1;
     string error_msg = 2;
     Profile data = 3;
}

service ProfileService {
    rpc Upsert(UpsertReq)  returns(UpsertResp) {}
    rpc MGet(MGetReq)  returns(MGetResp) {}
}

